// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number2Words shows the current value of the component 1`] = `
<span
  className="number2words__container"
>
  three
</span>
`;

exports[`The text should be eight hundred ninety four 1`] = `
<span
  className="number2words__container"
>
  eight hundred ninety four
</span>
`;

exports[`The text should be fourteen billion six hundred million seven hundred twenty eight thousand one hundred ninety five 1`] = `
<span
  className="number2words__container"
>
  fourteen billion six hundred million seven hundred twenty eight thousand one hundred ninety five
</span>
`;

exports[`The text should be three 1`] = `
<span
  className="number2words__container"
>
  three
</span>
`;
